--- a/src/components/Selection/Selection.module.css
+++ b/src/components/Selection/Selection.module.css
@@ -76,6 +76,10 @@
         width: 100%;
         height: 50%;
     }
+
+    .selection_right {
+        width: 90%;
+    }
 }
 
 @media(max-width: 480px) {
