--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,12 +30,16 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 html {
   font-family: "poppins", sans-serif;
+  max-width: 100vw;
 }
 
 body {
   position: relative;
+  width: 100%;
+
 }
